manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lm-wordbank
  labels:
    app: lm-wordbank
  namespace: bolone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lm-wordbank
  template:
    metadata:
      labels:
        app: lm-wordbank
    spec:
      containers:
        - name: lm-wordbank
          image: ${image}
          imagePullPolicy: Always
          ports:
            - containerPort: 5173
        # - name: lm-wordbank-tts
        #   image: ${image}
        #   imagePullPolicy: Always
        #   ports:
        #     - containerPort: 3001
        #   command:
        #     - node
        #     - start-tts-server.mjs

---
apiVersion: v1
kind: Service
metadata:
  name: lm-wordbank
  namespace: bolone
  labels:
    app: lm-wordbank
spec:
  clusterIP: None
  clusterIPs:
    - None
  ports:
    - name: http5173
      port: 5173
      protocol: TCP
      targetPort: 5173
    # - name: http3001
    #   port: 3001
    #   protocol: TCP
    #   targetPort: 3001
  selector:
    app: lm-wordbank
  sessionAffinity: None
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lm-wordbank
  namespace: bolone
  labels:
    app: lm-wordbank
spec:
  rules:
    - host: lm-wordbank.bolone.cn
      http:
        paths:
          - backend:
              service:
                name: lm-wordbank
                port:
                  number: 5173
            path: /
            pathType: ImplementationSpecific
    # - host: lm-wordbank-tts.bolone.cn
    #   http:
    #     paths:
    #       - backend:
    #           service:
    #             name: lm-wordbank
    #             port:
    #               number: 3001
    #         path: /
    #         pathType: ImplementationSpecific
  tls:
    - hosts:
        - lm-wordbank.bolone.cn
      secretName: ssl-bolone.cn-secret
    # - hosts:
    #     - lm-wordbank-tts.bolone.cn
    #   secretName: ssl-bolone.cn-secret
